# mlcts

./: .editorconfig  .gitignore  .mise.toml  .rustfmt.toml  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: build-website.yaml
assets/: .gitignore  myg2p-dict-mlcts.csv  myg2p-dict.txt
crates/mlcts_core/: Cargo.toml
crates/mlcts_dev_tools/: Cargo.toml
crates/mlcts_dev_tools/src/: mk_myg2p_mlcts.rs  mk_tokenizer_inputs.rs
crates/mlcts_proc_macros/: Cargo.toml
crates/mlcts_proc_macros/src/: lib.rs
crates/mlcts_tokenizer/: Cargo.toml
crates/mlcts_tokenizer/src/: lib.rs
crates/mlcts_tokenizer/tests/: .gitignore  test_tokenizer.rs
mlcts_core/src/: lib.rs
mlcts_dev_tools/: Cargo.toml
mlcts_dev_tools/src/: gen_tokenizer_tests.rs  mk_myg2p_mlcts.rs  mk_tokenizer_inputs.rs
mlcts_from_my/: Cargo.toml
mlcts_from_my/src/: lib.rs
mlcts_generator/: Cargo.toml
mlcts_generator/src/: lib.rs
mlcts_tokenizer/: Cargo.toml
mlcts_tokenizer/src/: lib.rs
mlcts_tokenizer/tests/: .gitignore
mlcts_website/: Cargo.toml  Trunk.toml
mlcts_website/src/: demo_page.rs  index.html  lib.rs  main.rs
src/: core.rs  lib.rs  tokenizer.rs
tests/: .gitignore  t_tokenizer_inputs.csv  t_tokenizer_inputs_single.csv  test_tokenizer.rs
tools/: prepare-mlcts-dict.civet  prepare-mlcts-dict.ts  prepare-myg2p-mlcts.civet  prepare_myg2p_mlcts.rs  prepare_tokenizer_inputs.rs  tokenizer-input-gen.civet
