[package]
name = "mlcts"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "prepare-myg2p-mlcts"
path = "tools/prepare_myg2p_mlcts.rs"

[[bin]]
name = "prepare-tokenizer-inputs"
path = "tools/prepare_tokenizer_inputs.rs"

[dependencies]
csv = { version = "1.3.0" }
serde = { version = "1.0.210", features = ["derive"] }
deno_core = { version = "0.311.0", optional = true }
lazy_static = { version = "1.5.0", optional = true }
reqwest = { version = "0.12.8", features = ["blocking"], optional = true }
indicatif = { version = "0.17.8", optional = true }
serde_json = { version = "1.0.128", optional = true }
clap = { version = "4.5.20", features = ["derive"], optional = true }

[features]
default = ["dev-tools"]
dt-parser = ["dep:serde_json"]
dt-mya2rom = ["dep:deno_core", "dep:reqwest", "dep:lazy_static"]
dt-ui = ["dep:indicatif", "dep:clap"]
dev-tools = ["dt-mya2rom", "dt-ui", "dt-parser"]
