[package]
name = "mlcts_dev_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mk-myg2p-mlcts"
path = "src/mk_myg2p_mlcts.rs"

[[bin]]
name = "mk-tokenizer-inputs"
path = "src/mk_tokenizer_inputs.rs"

[[bin]]
name = "gen-tokenizer-tests"
path = "src/gen_tokenizer_tests.rs"

[dependencies]
mlcts_core = { path = "../mlcts_core" }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
deno_core = "0.311.0"
indicatif = "0.17.8"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_plain = "1.0.2"
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = "2.0.79"
prettyplease = "0.2.22"
rand = "0.8.5"
